# xaoc_os

./: Cargo.toml  README.md  config.toml
src/: allocator.rs  cpu.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  panic_wait.rs  vga_buffer.rs
src/_arch/x86_64/: cpu.rs
src/_arch/x86_64/cpu/: boot.rs  boot.s
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/cpu/: boot.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
src/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
