[package]
name = "xaoc_os"
version = "0.1.0"
edition = "2018"
authors = ["Author Name <author@example.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
#panic = "abort" 

[profile.release]
panic = "abort"

[features]
default = []
bsp_rpi3 = []
bsp_rpi4 = []

[[bin]]
name = "kernel"
path = "src/main.rs"


[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
"-serial", "stdio"]
test-success-exit-code = 33
test-timeout = 300
#physical-memory-offset = "0x0000f00000000000"

[[test]]
name = "basic_boot"
path = "src/tests/basic_boot.rs"

[[test]]
name = "should_panic"
harness = false
path = "src/tests/should_panic.rs"

[[test]]
name = "stack_overflow"
harness = false
path = "src/tests/stack_overflow.rs"


[[test]]
name = "heap_allocation"
path = "src/tests/heap_allocation.rs"
